# Snake

./: .gitignore  CMakeLists.txt  README.md
cmake/: CopyRuntimeDeps.cmake
doc/: ChangeLog.md
launcher/: LauncherMain.c  LauncherMain.cpp
src/: Game.cpp  Game.h  HighScoreStorage.cpp  HighScoreStorage.h  main.cpp
src/element/: Button.cpp  Button.h  Fruit.cpp  Fruit.h  Grid.cpp  Grid.h  OptionButton.cpp  OptionButton.h  Snake.cpp  Snake.h  TitleSprite.cpp  TitleSprite.h
src/screen/: AboutScreen.cpp  AboutScreen.h  GameOverScreen.cpp  GameOverScreen.h  GameScreen.cpp  GameScreen.h  HelpScreen.cpp  HelpScreen.h  MenuScreen.cpp  MenuScreen.h  OptionScreen.cpp  OptionScreen.h  PauseScreen.cpp  PauseScreen.h  Screen.cpp  Screen.h
